--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Dotify</string>
-    <string name="change_user">Change user</string>
+    <string name="change_user">Change User</string>
     <string name="apply">Apply</string>
     <string name="username">Iron Man</string>
     <string name="album_cover">album cover</string>
