--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="shuffle">Shuffle</string>
     <string name="ivSong_description">image of the song</string>
     <string name="username_hint">enter the user name</string>
+    <string name="selected_info">%1$s - %2$s</string>
 </resources>
